--- a/rainbow (1).css
+++ b/rainbow (1).css
@@ -23,36 +23,43 @@
 .red {
     color: red;
     font-family: Arial, sans-serif;
+    background-color: blue;
 }
 
 .orange {
     color: orange;
     font-family: Verdana, sans-serif;
+    background-color: indigo;
 }
 
 .yellow {
     color: yellow;
     font-family: Impact, sans-serif;
+    background-color: violet;
 }
 
 .green {
     color: green;
     font-family: Courier, monospace;
+    background-color: orange;
 }
 
 .blue {
     color: blue;
     font-family: Georgia, serif;
+    background-color: green;
 }
 
 .indigo {
     color: indigo;
     font-family: Times New Roman, serif;
+    background-color: red;
 }
 
 .violet {
     color: violet;
     font-family: Comic Sans MS, cursive;
+    background-color: yellow;
 }
 
 .color::before {
